clusters/managed/mgd-mcp/polymarket-mcp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &app polymarket-mcp
  labels:
    milano.app: *app
    milano.level: managed
spec:
  replicas: 1
  selector:
    matchLabels:
      milano.app: *app
  template:
    metadata:
      labels:
        milano.app: *app
    spec:
      containers:
        - name: *app
          image: index.smithery.ai/aryankeluskar/polymarket-mcp:latest
          ports:
            - containerPort: 3001
              name: http
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
